[package]
name = "gender-app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
futures = "0.3"
gloo = { version = "0.4", features = ["futures"] }
kstring = "1"
log = "0.4"
phf = { version = "0.10", features = ["macros"] }
reqwasm = "0.2"
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1"
sycamore = "0.6"
thiserror = "1"
unidecode = "0.3"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "HtmlDocument", "HtmlTextAreaElement" ]}
wee_alloc = "0.4"


[profile.dev]
opt-level = 0
debug = true

# These typically shave over a quarter of the size off the generated .wasm file
# (originally taken from https://yew.rs/next/advanced-topics/optimizations)
[profile.release]
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive than just 's')
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
